--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -21,13 +21,13 @@
 # Find your bot's token here: https://discordapp.com/developers/applications/me/
 # Create a new application, with no redirect URI or boxes ticked.
 # Then click 'Create Bot User' on the application page and copy the token here.
-Token = bot_token
+Token = NjIwNzE1Mjk2NjY3MjA1NjQy.XZNUBg.8esdCKNmJiTAwzmKBeZG69mKlE4
 
 # The bot supports converting Spotify links and URIs to YouTube videos and
 # playing them. To enable this feature, please fill in these two options with valid
 # details, following these instructions: https://just-some-bots.github.io/MusicBot/using/spotify/
-Spotify_ClientID =
-Spotify_ClientSecret =
+Spotify_ClientID =ce3cc1fcf8e34eefb0bc611753c4c9dd
+Spotify_ClientSecret =c44dfc80dbff4dc283a42f0903e14c18
 
 [Permissions]
 # This option determines which user has full permissions and control of the bot.
