--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -52,7 +52,7 @@ BotExceptionIDs =
 [Chat]
 # Determines the prefix that must be used before commands in the Discord chat.
 # e.g if you set this to *, the play command would be triggered using *play.
-CommandPrefix = !
+CommandPrefix = ++
 
 # Restricts the bot to only listening to certain text channels. To use this, add
 # the IDs of the text channels you would like the bot to listen to, seperated by
@@ -74,7 +74,7 @@ AutojoinChannels =
 # Send direct messages for now playing messages instead of sending them into the guild. They are
 # sent to the user who added the media being played. Now playing messages for automatic entries
 # are unaffected and follows NowPlayingChannels config. The bot will not delete direct messages.
-DMNowPlaying = no
+DMNowPlaying = Yes
 
 # Disable now playing messages for entries automatically added by the bot, via the autoplaylist.
 DisableNowPlayingAutomatic = no
